add pdf schedule

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: base
 show-speakers: true
 show-sessions: true
 show-schedule: true
+printed-schedule: assets/presentations/2017/dsmAgile2017ScheduleHandout.pdf
 show-soldout: true
 event:
     name: dsmAgile
