--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ event:
       <br>
       <div id="nominate-form">
           <p>One of the keys to the success of past dsmAgile events (aside from the great attendees) are experience and insightful people we’ve invited to share their knowledge and experiences.  As we plan for the 2018 version of dsmAgile, we’d like to widen the circle and find new voices to share their experiences and ideas.</p>
-          <p>We’re looking for people who have some practical experiences to share and are skilled at sharing those ideas.  If you know someone that fits that bill, please let us know.  The more you can let us know about the person your nominating, including a sample of them speaking, the better.</p>
+          <p>We’re looking for people who have some practical experiences to share and are skilled at sharing those ideas.  If you know someone that fits that bill, please let us know.  The more you can let us know about the person you're nominating, including a sample of them speaking, the better.</p>
           <p>We’ll consider every nomination we receive, and reserve final decision on who to invite to speak.</p>
         <form action="https://formspree.io/dsmagile@agileiowa.org" method="POST">
           <div class="form-group">
