--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: base
 show-nominate-speaker: false
-show-speakers: false
-show-sessions: false
-show-schedule: false
+show-speakers: true
+show-sessions: true
+show-schedule: true
 <!-- printed-schedule: assets/presentations/2017/dsmAgile2017ScheduleHandout.pdf -->
 show-soldout: false
 event:
@@ -20,8 +20,8 @@ event:
         state: IA
         zip: 50309
 ---
-{% assign sessions = site.data.2018.10.sessions %}
-{% assign schedule = site.data.2018.10.schedule %}
+{% assign sessions = site.data.2018.09.sessions %}
+{% assign schedule = site.data.2018.09.schedule %}
 
   <!-- ==== HEADERWRAP ==== -->
   <div id="headerwrap" id="home" name="home">
