--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: base
 show-nominate-speaker: false
-show-speakers: true
-show-sessions: true
-show-schedule: true
+show-speakers: false
+show-sessions: false
+show-schedule: false
 <!-- printed-schedule: assets/presentations/2017/dsmAgile2017ScheduleHandout.pdf -->
 show-soldout: false
 event:
-    name: dsmAgile 2018
+    name: "dsmAgile 2019"
     tagline: Discuss. Discover. Learn.
-    date: 2018-09-28
+    date: 2019-10-18
     time: 8:30 AM to 4:30 PM
     <!-- mailing-list: http://eepurl.com/NOT_USED -->
-    eventbriteid: dsmagile-fall-2018-tickets-45895792551
+    eventbriteid: 63301460372
     location:
         name: Community Choice Credit Union Convention Center
         address: 833 5th Ave
@@ -20,8 +20,8 @@ event:
         state: IA
         zip: 50309
 ---
-{% assign sessions = site.data.2018.09.sessions %}
-{% assign schedule = site.data.2018.09.schedule %}
+{% assign sessions = site.data.2019.10.sessions %}
+{% assign schedule = site.data.2019.10.schedule %}
 
   <!-- ==== HEADERWRAP ==== -->
   <div id="headerwrap" id="home" name="home">
