--- a/index.html
+++ b/index.html
@@ -1,263 +1,274 @@
 ---
 layout: base
 show-nominate-speaker: false
-show-speakers: false
-show-sessions: false
+show-speakers: true
+show-sessions: true
 show-schedule: true
 # printed-schedule: assets/presentations/2017/dsmAgile2017ScheduleHandout.pdf
 show-soldout: true
 
 # Use to only show the schedule for printing
-print-schedule: true 
+print-schedule: true
 event:
-    name: "dsmAgile 2019"
-    tagline: Discuss. Discover. Learn.
-    date: 2019-10-18
-    time: 8:30 AM to 4:30 PM
-    <!-- mailing-list: http://eepurl.com/NOT_USED -->
-    eventbriteid: 63301460372
-    location:
-        name: Community Choice Credit Union Convention Center
-        address: 833 5th Ave
-        city: Des Moines
-        state: IA
-        zip: 50309
+name: "dsmAgile 2021"
+tagline: Discuss. Discover. Learn.
+date: 2021-05-07
+time: 8:30 AM to 4:30 PM
+<!-- mailing-list: http://eepurl.com/NOT_USED -->
+eventbriteid: 63301460372
+location:
+name: Community Choice Credit Union Convention Center
+address: 833 5th Ave
+city: Des Moines
+state: IA
+zip: 50309
 ---
 <!-- Liquid has a problem with data files that start with numbers. -->
 {% assign sessions = site.data.y2019.october.sessions %}
 {% assign schedule = site.data.y2019.october.schedule %}
 {% assign speakers = site.data.y2019.october.speakers %}
 
-  <!-- ==== HEADERWRAP ==== -->
-  {% if page.print-schedule == false %}
-  <div id="headerwrap" id="home" name="home">
-    <header class="clearfix">
-      <h1>{{page.event.name}}</h1>
-      <p>{{page.event.tagline}}</p>
-      <p>{{page.event.date | date: "%A, %B %-d, %Y" }} from {{page.event.time}}</p>
-      <div id="" class="vcard location">
-        <div class="org">{{page.event.location.name}}</div>
-        <div class="adr">
-            <div class="street-address">{{page.event.location.address}}</div>
-          <span class="locality">{{page.event.location.city}}</span>
-          <span class="region">{{page.event.location.state}}</span>,
-          <span class="postal-code">{{page.event.location.zip}}</span>
-        </div>
-      </div>
-      <!-- <p>Open Space and mixer to follow at the venue</p> -->
-        {% if page.event.eventbriteid %}
-      <a class="btn btn-success btn-large" href="https://www.eventbrite.com/e/{{page.event.eventbriteid}}">
-         {% if page.show-soldout == true %}
-            Waitlist
-         {% else %}
-            Register
-         {% endif %}</a>
-        {% endif %}
-      <br/>
-      <br/>
-    <!-- <a class="btn btn-success btn-large" href="link-to-presos" target="_blank">Download Presentations</a>-->
-      <!--<a class="btn btn-danger btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Sold Out!-->
-      <!--</a>-->
-    </header>
-  </div>
-
-  {% if page.show-nominate-speaker == true %}
-  <div class="container">
-    <div class="row white centered">
-      <h1>NOMINATE A SPEAKER</h1>
-      <hr>
-      <br>
-      <br>
-      <div id="nominate-form">
-          <p>One of the keys to the success of past dsmAgile events (aside from the great attendees) are the experienced and insightful people we’ve invited to share their knowledge and experiences. As we plan for the 2018 version of dsmAgile, we’d like to widen the circle and find new voices to share their experiences and ideas.</p>
-          <p>We’re looking for people who have some practical experiences to share and are skilled at sharing those ideas.  If you know someone that fits that bill, please let us know.  The more you can let us know about the person you're nominating, including a sample of them speaking, the better.</p>
-          <p>We’ll consider every nomination we receive, and reserve final decision on who to invite to speak.</p>
-        <form action="https://formspree.io/dsmagile@agileiowa.org" method="POST">
-          <div class="form-group">
-            <label for="submitterEmail">Your email</label>
-            <input type="email" class="form-control" id="submitterEmail" name="_replyto" aria-describedby="emailHelp" placeholder="Enter email" required>
-            <small id="emailHelp" class="form-text text-muted">In case we have questions.</small>
-          </div>
-          <div class="form-group">
-            <label for="submitterName">Your name</label>
-            <input type="text" class="form-control" id="submitterName" name="submitterName" aria-describedby="emailHelp" placeholder="Your name" required>
-          </div>
-          <div class="form-group">
-            <label for="speakersName">Speaker's name</label>
-            <input type="text" class="form-control" id="speakersName" name="speakersName" required>
-          </div>
-          <div class="form-group">
-            <label for="speakersEmail">Speaker's email</label>
-            <input type="email" class="form-control" id="speakersEmail" name="speakersEmail" required>
-          </div>
-          <div class="form-group">
-            <label for="speakerVideo">Video of this speaker (optional)</label>
-            <input type="text" class="form-control" id="speakerVideo" name="speakerVideo" placeholder="Enter a YouTube link of this person presenting" >
-          </div>
-          <div class="form-group form-check">
-            <label for="whyThisSpeaker">Why this speaker?</label>
-            <textarea class="form-control" id="whyThisSpeaker" rows="3" name="whyThisSpeaker" placeholder="Is there a topic you want to hear? Where did you hear about them?"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit Nomination</button>
-        </form>
+<!-- ==== HEADERWRAP ==== -->
+{% if page.print-schedule == false %}
+<div id="headerwrap" id="home" name="home">
+  <header class="clearfix">
+    <h1>{{page.event.name}}</h1>
+    <p>{{page.event.tagline}}</p>
+    <p>{{page.event.date | date: "%A, %B %-d, %Y" }} from {{page.event.time}}</p>
+    <div id="" class="vcard location">
+      <div class="org">{{page.event.location.name}}</div>
+      <div class="adr">
+        <div class="street-address">{{page.event.location.address}}</div>
+        <span class="locality">{{page.event.location.city}}</span>
+        <span class="region">{{page.event.location.state}}</span>,
+        <span class="postal-code">{{page.event.location.zip}}</span>
       </div>
     </div>
+    <!-- <p>Open Space and mixer to follow at the venue</p> -->
+    {% if page.event.eventbriteid %}
+    <a class="btn btn-success btn-large" href="https://www.eventbrite.com/e/{{page.event.eventbriteid}}">
+      {% if page.show-soldout == true %}
+      Waitlist
+      {% else %}
+      Register
+      {% endif %}</a>
+    {% endif %}
+    <br />
+    <br />
+    <!-- <a class="btn btn-success btn-large" href="link-to-presos" target="_blank">Download Presentations</a>-->
+    <!--<a class="btn btn-danger btn-large" href="https://www.eventbrite.com/e/dsmagile-2014-tickets-12171610615?ref=ebtnebregn" target="_blank">Sold Out!-->
+    <!--</a>-->
+  </header>
+</div>
+
+{% if page.show-nominate-speaker == true %}
+<div class="container">
+  <div class="row white centered">
+    <h1>NOMINATE A SPEAKER</h1>
+    <hr>
+    <br>
+    <br>
+    <div id="nominate-form">
+      <p>One of the keys to the success of past dsmAgile events (aside from the great attendees) are the experienced and
+        insightful people we’ve invited to share their knowledge and experiences. As we plan for the 2018 version of
+        dsmAgile, we’d like to widen the circle and find new voices to share their experiences and ideas.</p>
+      <p>We’re looking for people who have some practical experiences to share and are skilled at sharing those ideas.
+        If you know someone that fits that bill, please let us know. The more you can let us know about the person
+        you're nominating, including a sample of them speaking, the better.</p>
+      <p>We’ll consider every nomination we receive, and reserve final decision on who to invite to speak.</p>
+      <form action="https://formspree.io/dsmagile@agileiowa.org" method="POST">
+        <div class="form-group">
+          <label for="submitterEmail">Your email</label>
+          <input type="email" class="form-control" id="submitterEmail" name="_replyto" aria-describedby="emailHelp"
+            placeholder="Enter email" required>
+          <small id="emailHelp" class="form-text text-muted">In case we have questions.</small>
+        </div>
+        <div class="form-group">
+          <label for="submitterName">Your name</label>
+          <input type="text" class="form-control" id="submitterName" name="submitterName" aria-describedby="emailHelp"
+            placeholder="Your name" required>
+        </div>
+        <div class="form-group">
+          <label for="speakersName">Speaker's name</label>
+          <input type="text" class="form-control" id="speakersName" name="speakersName" required>
+        </div>
+        <div class="form-group">
+          <label for="speakersEmail">Speaker's email</label>
+          <input type="email" class="form-control" id="speakersEmail" name="speakersEmail" required>
+        </div>
+        <div class="form-group">
+          <label for="speakerVideo">Video of this speaker (optional)</label>
+          <input type="text" class="form-control" id="speakerVideo" name="speakerVideo"
+            placeholder="Enter a YouTube link of this person presenting">
+        </div>
+        <div class="form-group form-check">
+          <label for="whyThisSpeaker">Why this speaker?</label>
+          <textarea class="form-control" id="whyThisSpeaker" rows="3" name="whyThisSpeaker"
+            placeholder="Is there a topic you want to hear? Where did you hear about them?"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit Nomination</button>
+      </form>
+    </div>
   </div>
-  {% endif %}
+</div>
+{% endif %}
 
 {% if page.show-speakers == true %}
 <!-- ==== SPEAKERS ==== -->
-  <div class="container" id="speakers" name="speakers">
+<div class="container" id="speakers" name="speakers">
+  <br>
+  <div class="row white centered">
+    <h1 class="centered">SPEAKERS</h1>
+    <hr>
     <br>
-    <div class="row white centered">
-      <h1 class="centered">SPEAKERS</h1>
-      <hr>
-      <br>
-      <br>
-<!-- Loops thru each of the files  -->
-{% for speaker_hash in speakers %}
+    <br>
+    <!-- Loops thru each of the files  -->
+    {% for speaker_hash in speakers %}
     <!-- Gets the value of the file -->
     {% assign speaker = speaker_hash[1] %}
-        <div class="col-md-6 centered" id="{{speaker.id}}">
-              <img class="img img-circle img-md" src="/assets/img/speakers/{{speaker.image}}" alt="">
-              <br>
-              <h4><b>{{speaker.name}}</b></h4>
-              {% if speaker.twitter %}
-              <a class="btn btn-xs btn-social-icon btn-twitter" href="https://twitter.com/{{speaker.twitter}}">
-                <i class="fa fa-twitter"></i>
-              </a>
-              {% endif %}
+    <div class="col-md-6 centered" id="{{speaker.id}}">
+      <img class="img img-circle img-md" src="/assets/img/speakers/{{speaker.image}}" alt="">
+      <br>
+      <h4><b>{{speaker.name}}</b></h4>
+      {% if speaker.twitter %}
+      <a class="btn btn-xs btn-social-icon btn-twitter" href="https://twitter.com/{{speaker.twitter}}">
+        <i class="fa fa-twitter"></i>
+      </a>
+      {% endif %}
 
-              {% if speaker.linkedin %}
-              <a class="btn btn-xs btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/{{speaker.linkedin}}">
-                  <i class="fa fa-linkedin"></i>
-              </a>
-              {% endif %}
-              <p>{{speaker.bio}}</p>
-          </div>
-{% endfor %}
+      {% if speaker.linkedin %}
+      <a class="btn btn-xs btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/{{speaker.linkedin}}">
+        <i class="fa fa-linkedin"></i>
+      </a>
+      {% endif %}
+      <p>{{speaker.bio}}</p>
     </div>
+    {% endfor %}
   </div>
+</div>
 {% endif %}
 <!-- End Speakers Section -->
 {% if page.show-sessions == true %}
-  <!-- ==== SESSIONS ==== -->
-  <div class="container" id="sessions" name="sessions">
-    <div class="row white">
-      <br>
-      <h1 class="centered">SESSIONS</h1>
-      <hr>
+<!-- ==== SESSIONS ==== -->
+<div class="container" id="sessions" name="sessions">
+  <div class="row white">
+    <br>
+    <h1 class="centered">SESSIONS</h1>
+    <hr>
 
-{% for session_hash in sessions %}
-{% assign session = session_hash[1] %}
-{% if session.title %}
-<div class="col-md-6 centered" id="{{session.id}}">
-        <div class="col-md-4">
-          {% for speaker in session.speakers %}
-            {% assign current_speaker = speakers[speaker.id]%}
-            <a href="#{{speaker.id}}" class="smoothScroll">
-              <img class="img img-circle" src="/assets/img/speakers/{{current_speaker.image}}" height="60px" width="60px" alt="">
-          </a>
-          <br>
-          <h4>{{current_speaker.name}}</h4>
-            
-          {% endfor %}
-        </div>
-        <div class="col-md-8">
-            <h4><b>{{session.title}}</b></h4>
-            {% if session.link %}
-            <a href="{{session.link}}" target="_blank">Slides</a>
-            {% endif %}
-            <p>{{session.abstract}}</p>
-        </div>
+    {% for session_hash in sessions %}
+    {% assign session = session_hash[1] %}
+    {% if session.title %}
+    <div class="col-md-6 centered" id="{{session.id}}">
+      <div class="col-md-4">
+        {% for speaker in session.speakers %}
+        {% assign current_speaker = speakers[speaker.id]%}
+        <a href="#{{speaker.id}}" class="smoothScroll">
+          <img class="img img-circle" src="/assets/img/speakers/{{current_speaker.image}}" height="60px" width="60px"
+            alt="">
+        </a>
+        <br>
+        <h4>{{current_speaker.name}}</h4>
+
+        {% endfor %}
       </div>
-
-{% endif %}
-{% endfor %}
+      <div class="col-md-8">
+        <h4><b>{{session.title}}</b></h4>
+        {% if session.link %}
+        <a href="{{session.link}}" target="_blank">Slides</a>
+        {% endif %}
+        <p>{{session.abstract}}</p>
+      </div>
     </div>
+
+    {% endif %}
+    {% endfor %}
   </div>
+</div>
 
-  <!-- ==== SECTION DIVIDER1 -->
-  <section class="section-divider textdivider divider1">
-    <div class="container">
-      <h1>&nbsp;</h1>
-      <p>&nbsp;</p>
-    </div>
-  </section>
+<!-- ==== SECTION DIVIDER1 -->
+<section class="section-divider textdivider divider1">
+  <div class="container">
+    <h1>&nbsp;</h1>
+    <p>&nbsp;</p>
+  </div>
+</section>
 {% endif %}
 
 <!-- print-schedule -->
 {% endif %}
 
 {% if page.show-schedule == true %}
-  <div class="container" id="schedule" name="schedule">
-    <br>
-    <div class="row white centered">
-      <h1 class="centered">SCHEDULE</h1>
-      <hr/>
+<div class="container" id="schedule" name="schedule">
+  <br>
+  <div class="row white centered">
+    <h1 class="centered">SCHEDULE</h1>
+    <hr />
 
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th class="col-time">Schedule</th>
-            <th>Room 302/303</th>
-            <th>Room 304/305</th>
-            <th>Room 306/307</th>
-            <th>Room 308/309</th>
-          </tr>
-        </thead>
-        <tbody>
-{% for slot in schedule %}
-    {%if slot.break %}
-        <tr class="col-all">
-            <td class="col-time">{{ slot.time }}</td>
-            <td colspan="4">{{ slot.break }}</td>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th class="col-time">Schedule</th>
+          <th>Room 302/303</th>
+          <th>Room 304/305</th>
+          <th>Room 306/307</th>
+          <th>Room 308/309</th>
         </tr>
-    {% elsif slot.keynote %}
+      </thead>
+      <tbody>
+        {% for slot in schedule %}
+        {%if slot.break %}
+        <tr class="col-all">
+          <td class="col-time">{{ slot.time }}</td>
+          <td colspan="4">{{ slot.break }}</td>
+        </tr>
+        {% elsif slot.keynote %}
         <tr class="col-all">
           <td class="col-time">{{ slot.time }}</td>
           <td colspan="4">
             <div class="col-lg-12">
-              
+
               {% for speaker in sessions[slot.keynote].speakers %}
               {% assign speaker_info = speakers[speaker.id] %}
               <a href="#{{speaker_info.id}}" class="smoothScroll">
-                  <img class="img img-circle" src="/assets/img/speakers/{{speaker_info.image}}" height="60px" width="60px" alt="">
+                <img class="img img-circle" src="/assets/img/speakers/{{speaker_info.image}}" height="60px" width="60px"
+                  alt="">
               </a>
               <h4>{{speaker_info.name}}</h4>
               {% endfor %}
-          </div>
-          <div class="col-lg-12">
-            <a href="#{{ sessions[slot.keynote].id }}" class="smoothScroll">{{ sessions[slot.keynote].title }}</a>
-          </div>
-          <div class="col-lg-12">{{ slot.room }}</div>
+            </div>
+            <div class="col-lg-12">
+              <a href="#{{ sessions[slot.keynote].id }}" class="smoothScroll">{{ sessions[slot.keynote].title }}</a>
+            </div>
+            <div class="col-lg-12">{{ slot.room }}</div>
           </td>
-        </tr>    
-    {% else %}
-        <tr>
-            <td class="col-time">{{ slot.time }}</td>
-        {% for session in slot.sessions %}
-          <td>
-              <div class="col-lg-4">
-                  {% for speaker in sessions[session.id].speakers %}
-                  {% assign speaker_info = speakers[speaker.id] %}
-                  <a href="#{{speaker_info.id}}" class="smoothScroll">
-                      <img class="img img-circle" src="/assets/img/speakers/{{speaker_info.image}}" height="60px" width="60px" alt="">
-                  </a>
-                  <h4>{{speaker_info.name}}</h4>
-                  {% endfor %}
-              </div>
-              <div class="col-lg-8">
-                <a href="#{{ sessions[session.id].id }}" class="smoothScroll">{{ sessions[session.id].title }}</a>
-              </div>
-          </td>
-        {% endfor %}
         </tr>
-    {% endif %}
+        {% else %}
+        <tr>
+          <td class="col-time">{{ slot.time }}</td>
+          {% for session in slot.sessions %}
+          <td>
+            <div class="col-lg-4">
+              {% for speaker in sessions[session.id].speakers %}
+              {% assign speaker_info = speakers[speaker.id] %}
+              <a href="#{{speaker_info.id}}" class="smoothScroll">
+                <img class="img img-circle" src="/assets/img/speakers/{{speaker_info.image}}" height="60px" width="60px"
+                  alt="">
+              </a>
+              <h4>{{speaker_info.name}}</h4>
+              {% endfor %}
+            </div>
+            <div class="col-lg-8">
+              <a href="#{{ sessions[session.id].id }}" class="smoothScroll">{{ sessions[session.id].title }}</a>
+            </div>
+          </td>
+          {% endfor %}
+        </tr>
+        {% endif %}
 
-{% endfor%}
-        </tbody>
-      </table>
-    </div>
+        {% endfor%}
+      </tbody>
+    </table>
   </div>
+</div>
 {% endif %}
