update to ruby 3

--- a/index.html
+++ b/index.html
@@ -1,27 +1,5 @@
 ---
-layout: base
-show-nominate-speaker: false
-show-speakers: true
-show-sessions: true
-show-schedule: true
-# printed-schedule: assets/presentations/2017/dsmAgile2017ScheduleHandout.pdf
-show-soldout: true
-
-# Use to only show the schedule for printing
-print-schedule: true
-event:
-name: "dsmAgile 2021"
-tagline: Discuss. Discover. Learn.
-date: 2021-05-07
-time: 8:30 AM to 4:30 PM
-<!-- mailing-list: http://eepurl.com/NOT_USED -->
-eventbriteid: 63301460372
-location:
-name: Community Choice Credit Union Convention Center
-address: 833 5th Ave
-city: Des Moines
-state: IA
-zip: 50309
+layout: baseru
 ---
 <!-- Liquid has a problem with data files that start with numbers. -->
 {% assign sessions = site.data.y2019.october.sessions %}
