--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 ---
-layout: baseru
+layout: base
+show-nominate-speaker: false
+show-speakers: false
+show-sessions: false
+show-schedule: false
+# printed-schedule: assets/presentations/2017/dsmAgile2017ScheduleHandout.pdf
+show-soldout: false
+
+# Use to only show the schedule for printing
+print-schedule: false 
+event:
+    name: "dsmAgile 2021"
+    tagline: Discuss. Discover. Learn.
+    date: 2021-05-07
+    time: 9:00 AM to 5:00 PM
+    <!-- mailing-list: http://eepurl.com/NOT_USED -->
+    eventbriteid: 148857365387
+    location:
+        name: Community Choice Credit Union Convention Center
+        address: 833 5th Ave
+        city: Des Moines
+        state: IA
+        zip: 50309
 ---
+
 <!-- Liquid has a problem with data files that start with numbers. -->
 {% assign sessions = site.data.y2019.october.sessions %}
 {% assign schedule = site.data.y2019.october.schedule %}
@@ -174,7 +197,7 @@ layout: baseru
 {% endif %}
 
 <!-- print-schedule -->
-{% endif %}
+<!-- {% endif %} -->
 
 {% if page.show-schedule == true %}
 <div class="container" id="schedule" name="schedule">
